src/objects/Message__c.object
<CustomObject>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_SHA256__c</fullName>
        <label>Document SHA256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FriendlyName__c</fullName>
        <label>FriendlyName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Number__c</fullName>
        <label>From Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_SHA256__c</fullName>
        <label>Image sha256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_type__c</fullName>
        <label>Image type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Latitude__c</fullName>
        <label>Location Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Link__c</fullName>
        <label>Location Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Longitude__c</fullName>
        <label>Location Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Body__c</fullName>
        <label>Message Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_Template_Body__c</fullName>
        <label>Message Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Message Template</label>
        <referenceTo>Message_Template__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outgoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outgoing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Message_Id__c</fullName>
        <label>Parent Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <label>Reaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_At__c</fullName>
        <label>Sent At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Number__c</fullName>
        <label>To Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_ID__c</fullName>
        <label>Video ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_SHA256__c</fullName>
        <label>Video SHA256</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Type__c</fullName>
        <label>Video Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Type__c</columns>
        <columns>Message_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>To_Number__c</columns>
        <columns>Delivery_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>